--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <!-- TODO: Sett din egen groupID og artifactID -->
-    <groupId>velg.en.fornuftig.groupID</groupId>
+    <groupId>edu.ntnu.sebaso.oblig3</groupId>
     <artifactId>CardGame</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -13,6 +13,9 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <javafx.version>21.0.2</javafx.version>
+        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
+        <maven.shade.plugin.version>3.3.0</maven.shade.plugin.version>
     </properties>
 
     <!-- TODO: Sett dine dependencies for JavaFX og JUnit5-testing -->
