--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,26 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javafx.version>21.0.2</javafx.version>
-        <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
-        <maven.shade.plugin.version>3.3.0</maven.shade.plugin.version>
     </properties>
 
-    <!-- TODO: Sett dine dependencies for JavaFX og JUnit5-testing -->
+    <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21.0.1</version>
+        </dependency>
+    </dependencies>
 
-    <!-- TODO: Sett riktig versjon av nødvendige plugins -->
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>java.no.ntnu.idatx2003.oblig3.cardgame.CardGameApp</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
