--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>java.no.ntnu.idatx2003.oblig3.cardgame.CardGameApp</mainClass>
+                    <mainClass>src\main\java\no\ntnu\idatx2003\oblig3\cardgame\CardGameApp.java</mainClass>
                 </configuration>
             </plugin>
         </plugins>
